finished mobile header for home page. Footer is next

--- a/style.css
+++ b/style.css
@@ -7,12 +7,15 @@ header{
 .herobanner {
     width : 100%;
     height: auto;
+    z-index: -1;
 }
 
 nav {
-    background-color: blue;
+    position: absolute;
     width: 100%;
     text-align: center;
+    z-index: 1;
+    bottom: 0;
 }
 
 nav a {
@@ -20,7 +23,7 @@ nav a {
     color: white;
     padding: 10%;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    -webkit-text-stroke: 0.5px black;
+    -webkit-text-stroke: 0.7px black;
 }
 
 body {
