--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/*Beginning of Header rules*/
+
 header{
     position: sticky;
     top:0;
@@ -26,6 +28,8 @@ nav a {
     -webkit-text-stroke: 0.7px black;
 }
 
+/*End of header rules*/
+
 body {
     background-color: black;
 }
@@ -33,3 +37,20 @@ body {
 p {
     color: white;
 }
+
+/*beginning of footer rules*/
+footer {
+    position:fixed;
+    bottom: 0;
+    text-align: center;
+     width: 100%;
+     background-color:black ;
+}
+
+footer img {
+    height: 30px;
+    width: auto;
+    padding-left: 3%;
+    padding-right: 3%;
+}
+/*end of footer rules*/
