Made template for new pages. Working on body

--- a/style.css
+++ b/style.css
@@ -34,6 +34,13 @@ body {
     background-color: black;
 }
 
+.aboutme {
+    width: 55%;
+    height: auto;
+    float: left;
+    shape-outside: circle();
+}
+
 p {
     color: white;
 }
