--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
 header{
     position: sticky;
     top:0;
+    z-index: 100;
 }
 
 .herobanner {
     width : 100%;
     height: auto;
-    z-index: 99;
+    /*z-index: 99;*/
     margin-bottom: 0;
 }
 
@@ -15,7 +16,7 @@ nav {
     position: absolute;
     width: 100%;
     text-align: center;
-    z-index: 100;
+    /*z-index: 100;*/
     bottom: 0;
 }
 
@@ -97,7 +98,7 @@ p {
 
 video{
     position: relative;
-    z-index: -1;
+    z-index: 0;
 }
 
 .bestclips p{
