--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@ nav a {
 /*End of header rules*/
 
 body {
-    background-color: black;
+    background: rgb(232,230,255);
+    background: radial-gradient(circle, rgba(232,230,255,1) 0%, rgba(255,242,88,1) 50%, rgba(0,212,255,1) 100%);
     position: relative;
     display: block;
     margin: 0,0,0,0;
@@ -101,6 +102,10 @@ video{
     z-index: 0;
 }
 
+.bestclips{
+    position: relative;
+}
+
 .bestclips p{
     padding-top: 6%;
     padding-bottom: 6%;
@@ -113,7 +118,7 @@ video{
     background: rgb(255,161,248);
     background: linear-gradient(0deg, rgba(255,161,248,1) 0%, rgba(187,14,229,1) 100%);
     width: 75%;
-    z-index: -3;
+    z-index: -2;
     position: relative;
 }
 
@@ -126,6 +131,13 @@ video{
     height: 100%;
     width: 100%;
     z-index: -4;
+}
+
+.orangeclouds{
+    z-index: -3;
+    position: absolute;
+    top: 0;
+    width: 100%
 }
 
 .bestclips video{
@@ -142,7 +154,7 @@ footer {
     bottom: 0;
     text-align: center;
      width: 100%;
-     background-color:black ;
+     background-color:rgb(50, 251, 227);
 }
 
 footer img {
