--- a/style.css
+++ b/style.css
@@ -47,9 +47,10 @@ body {
 
 p {
     color: white;
-    -webkit-text-stroke-width: 0.3px;
+    -webkit-text-stroke-width: 0.0px;
     -webkit-text-stroke-color: black;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: larger;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .aboutmeinfo {
@@ -175,15 +176,32 @@ video{
     padding-bottom: 10%;
 }
 
+/*Rules for the book me page*/
+.requestform{
+    position: relative;
+}
+
+form{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 1;
+}
+
+.formpic{
+    position:absolute;
+    width: 100%;
+    height: auto;
+    z-index: -1;
+}
+
 /*beginning of footer rules*/
 footer {
-    position:fixed;
+    position: sticky;
     bottom: 0;
     text-align: center;
-     width: 100%;
-     background-color:rgb(50, 251, 227);
-     overflow-x: hidden;
-    
+    width: 100%;
+    background-color:rgb(50, 251, 227);   
 }
 
 footer img {
