--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
     position: relative;
     display: block;
     margin: 0,0,0,0;
+    overflow:hidden;
 }
 
 .aboutme {
@@ -266,13 +267,9 @@ button{
 /*Beginning of clips page rules*/
 .yellowsquare{
     position: relative;
-    background-color: yellow;
-    width: 90%;
-    height: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+
 }
+
 .orangesquare{
     position: relative;
 }
