--- a/style.css
+++ b/style.css
@@ -267,11 +267,18 @@ button{
 /*Beginning of clips page rules*/
 .yellowsquare{
     position: relative;
+    width: 300px;
+    height: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
 .orangesquare{
-    position: relative;
+   /* position: relative;
+    width: 85%;
+    height: 85%;*/
 }
 .bluesquare{
     position: relative;
