--- a/style.css
+++ b/style.css
@@ -267,21 +267,45 @@ button{
 /*Beginning of clips page rules*/
 .yellowsquare{
     position: relative;
-    width: 300px;
-    height: 300px;
+    background-color: rgb(233, 233, 125);
+    width: 375px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 10%;
 
 }
 
 .orangesquare{
-   /* position: relative;
-    width: 85%;
-    height: 85%;*/
+    position: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgb(228, 180, 91);
+    width: 90%;
+    padding-top: 10%;
 }
 .bluesquare{
     position: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgb(126, 126, 221);
+    width: 90%;
+    padding-top: 10%;
+}
+
+.testtitle{
+    text-align: center;
+}
+
+.testclip{
+    position: relative;
+    display:block;
+    width: 99%;
+    height: auto;
+    margin-left: auto;
+    margin-left: auto;
 }
 
 /*beginning of footer rules*/
