--- a/style.css
+++ b/style.css
@@ -271,7 +271,8 @@ button{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 10%;
+    padding-top: 20%;
+    /*z-index: -4;*/
 
 }
 
@@ -283,14 +284,15 @@ button{
     background-color: rgb(228, 180, 91);
     width: 90%;
     padding-top: 10%;
+    /*z-index: -3;*/
 }
 
 .clipsdrawing{
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 100;
-
+    width: 55%;
+    /*z-index: -4;*/
 }
 
 .bluesquare{
@@ -301,6 +303,7 @@ button{
     background-color: rgb(126, 126, 221);
     width: 90%;
     padding-top: 10%;
+    /*z-index: -1;*/
 }
 
 .testtitle{
