Just need to add clips to the clips page then I can do the same for the videos page

--- a/style.css
+++ b/style.css
@@ -295,6 +295,13 @@ button{
     /*z-index: -4;*/
 }
 
+.daddrawing{
+    position: absolute;
+    top: 0;
+    right: 10%;
+    width: 35%;
+}
+
 .bluesquare{
     position: relative;
     display: block;
